# scrapekit

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: example_config.yaml
examples/: api_scraper.py  async_scraper_example.py  books_scraper.py  quotes_scraper.py  table_scraper_example.py
scrapekit/: __init__.py  cli.py
scrapekit/core/: __init__.py  async_scraper.py  scraper.py  session.py
scrapekit/exporters/: __init__.py  base.py  csv_exporter.py  excel_exporter.py  json_exporter.py  parquet_exporter.py  sqlite_exporter.py
scrapekit/models/: __init__.py  config.py
scrapekit/parsers/: __init__.py  html_parser.py  table_parser.py
scrapekit/utils/: __init__.py  logger.py  rate_limiter.py  retry.py  user_agents.py
tests/: test_exporters.py  test_parsers.py  test_scraper.py
